create header section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,32 @@
     <link rel="stylesheet" href="css/style.css" />
 
 </head>
+
+
 <body>
+
+  <header class="header_background">
+
+      <section class="container">
+
+        <section class="header_navigation-row">
+
+          <nav class="header_logo_box">
+              <a href="#section_one">BestShop</a>
+          </nav>
+
+          <nav class="header_menu_box">
+              <a href="#section_two">Why Us</a>
+              <a href="#section_three">Benefits</a>
+              <a href="#section_four">Prices</a>
+              <a href="#section_five">Contact</a>
+          </nav>
+
+        </section>
+
+      </section>
+
+  </header>
 
 </body>
 </html>
