--- a/index.html
+++ b/index.html
@@ -46,5 +46,28 @@
 
   </header>
 
+
+
+
+  <main class="first_section" id="section_one">
+
+      <div class="container">
+
+         <section class="text-box">
+             <h1>Sell More!</h1>
+             <p>Open shop on our platform and increase your sales</p>
+             <button  onclick="window.location.href='https://www.coderslab.pl';">Open your shop</button>
+         </section>
+
+      </div>
+
+      <section class="background-box">
+          <img src="./assets/Background.png">
+      </section>
+
+  </main>
+
+
+
 </body>
 </html>
