--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
 
       <section class="second_section_boxes">
 
-          <article class="second_section_first_box" >
-              <div class="first_box">
-                  <img src="./assets/Person.svg" alt="Person">;
+          <article class="second_section_first_box  box" >
+              <div class="first_box_img">
+                  <img src="./assets/Person.svg" alt="Person">
               </div>
               <h3>100000+</h3>
               <p>daily entries</p>
           </article>
 
-          <article class="second_section_second_box" >
-              <div class="second_box">
-                  <img src="./assets/Eye.svg" alt="Eye">;
+          <article class="second_section_second_box  box" >
+              <div class="second_box_img">
+                  <img src="./assets/Eye.svg" alt="Eye">
               </div>
               <h3>2000000+</h3>
               <p>seen products every day</p>
           </article>
 
-          <article class="second_section_third_box" >
-              <div class="third_box">
-                  <img src="./assets/Catalog.svg" alt="Catalog">;
+          <article class="second_section_third_box  box" >
+              <div class="third_box_img">
+                  <img src="./assets/Catalog.svg" alt="Catalog">
               </div>
               <h3>10000+</h3>
               <p>added posts daily</p>
