--- a/index.html
+++ b/index.html
@@ -108,5 +108,62 @@
 
 
 
+  <section class="third_section" id="section_three">
+
+      <div class="container">
+
+
+          <article class="third_section_first_box  section_box">
+              <div class="first_box_A">
+                  <h2>Be always first</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                      Ut enim ad minim veniam.</p>
+                  <hr>
+              </div>
+
+              <div class="first_box_B">
+                  <img src="./assets/Macbook.png" alt="Mcbook" >
+              </div>
+          </article>
+
+
+          <article class="third_section_second_box  section_box">
+              <div class="second_box_A">
+                  <img src="./assets/iPhone.png" alt="iPhone">
+              </div>
+
+              <div class="second_boxB">
+                  <h2>Your shop is where you are!</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                      Ut enim ad minim veniam.</p>
+                  <hr>
+              </div>
+          </article>
+
+
+          <article class="third_section_third_box  section_box">
+              <div class="third_box_A">
+                  <h2>Increase recognition your brand!</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                      Ut enim ad minim veniam.</p>
+                  <hr>
+              </div>
+
+              <div class="third_box_B">
+                  <img src="./assets/Trumpet.png" alt="Trumpet">
+              </div>
+          </article>
+
+
+      </div>
+
+  </section>
+
+
+
+
 </body>
 </html>
