--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <img src="./assets/iPhone.png" alt="iPhone">
               </div>
 
-              <div class="second_boxB">
+              <div class="second_box_B">
                   <h2>Your shop is where you are!</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                       sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -162,6 +162,67 @@
 
   </section>
 
+
+
+
+
+
+
+<section class="fourth_section" id="section_four">
+    <div class="container">
+
+        <h2>Pricing</h2>
+
+        <article class="fourth_section_first_box    pricing_box">
+            <h3>Basic</h3>
+            <h4>$0</h4>
+            <h5></h5>
+
+            <p>100 MB HDD</p>
+            <p>1 Subdomain</p>
+            <p>2 E-mails</p>
+            <p>Two years license</p>
+            <p>Full support</p>
+
+            <a class="fourth_section_first_box_btn    pricing_btn"  href="#section_one">Begin</a>
+        </article>
+
+
+        <article class="fourth_section_second_box   pricing_box">
+            <h3>Professional</h3>
+            <h4>$25</h4>
+            <h5>Limited offer</h5>
+
+            <p>500 MB HDD</p>
+            <p>2 Subdomains</p>
+            <p>5 E-mails</p>
+            <p>One year license</p>
+            <p>Full support</p>
+
+            <a class="fourth_section_second_box_btn    pricing_btn"   href="#section_one">Begin</a>
+        </article>
+
+
+
+        <article class="fourth_section_third_box    pricing_box">
+            <h3>Premium</h3>
+            <h4>$60</h4>
+            <h5>Limited offer</h5>
+
+            <p>2 GB HDD</p>
+            <p>5 Subdomains</p>
+            <p>20 E-mails</p>
+            <p>Two years license</p>
+            <p>Full support</p>
+
+            <a class="fourth_section_third_box_btn    pricing_btn"   href="#section_one">Begin</a>
+        </article>
+
+
+    </div>
+
+
+</section>
 
 
 
