--- a/index.html
+++ b/index.html
@@ -259,13 +259,15 @@
                 <label>E-mail</label>
                 <input class="e-mail" type="text">
 
-                <input class="checkbox" type="checkbox" checked="checked">
-                <span></span>
-                <label>I hereby give consent for my personal data included in my application to be processed
+                <label class="checkbox">
+                   <input class="checkbox" type="checkbox" checked="checked">
+                   <span></span>
+                  I hereby give consent for my personal data included in my application to be processed
                     for the purposes of the recruitment process under the European Parliament’s and Council
                     of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016,
                     with regard to the processing of personal data and on the free movement of such data, and
                     repealing Directive 95/46/EC (Data Protection Directive)</label>
+
 
                 <button class="fifth_section_btn">Send</button>
 
