--- a/index.html
+++ b/index.html
@@ -281,5 +281,31 @@
 
 
 
+
+<footer class="footer_background">
+
+    <div class="container">
+
+      <article class="footer_row">
+
+        <section class="footer_row_logo_box">
+            <a href="#section_one">BestShop</a>
+            <p>&copy; 2019 BestShop LTD, All Rights Reserved</p>
+        </section>
+
+        <section class="foter_row_socialMedia_box">
+            <a href="https://twitter.com/coderslabpl" target="_blank" rel="noopener noreferrer nofollow" class="icon">
+                <img class="socialMediaIcon" alt="social media icon" src="./assets/Twitter.svg"></a>
+            <a href="https://www.facebook.com/CodersLabSzkolaIT" target="_blank" rel="noopener noreferrer nofollow" class="icon">
+                <img class="socialMediaIcon" alt="social media icon" src="./assets/Facebook.svg"></a>
+        </section>
+
+      </article>
+
+    </div>
+
+</footer>
+
+
 </body>
 </html>
