--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
-
+    <link rel="stylesheet" href="scss/main.scss" />
 </head>
 
 
